--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* .div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: #9b59b6;
+  flex-direction: column;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
 }
+
+.heading {
+  color: #ecf0f1;
+  font-size: 4rem;
+  font-weight: 300;
+}
+
+input {
+  padding: 1rem;
+  text-align: center;
+  border-radius: 6px;
+  border: none;
+  outline: none;
+  margin: 1rem 0;
+}
+
+button {
+  border: none;
+  outline: none;
+  background: transparent;
+  border: 1px solid #ffff;
+  padding: 1rem;
+  margin: 1rem;
+  width: 15rem;
+  cursor: pointer;
+  color: #ffff;
+  transition: all 0.5s;
+
+}
+
+button:hover {
+  background: #ecf0f1;
+  color: black;
+
+} */
